added sponsor section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 
         </section>
         <section class="facts">
-            <h3 class="section-title">Some Facts</h3>
+            <div class="facts-content">
+                <h3 class="section-title">Some Facts</h3>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
             <div class="card-facts-container">
                 <div class="card">
                     <img src="images/icons/ribon.png" alt="">
@@ -77,6 +79,20 @@
                     <h2 class="card-stats">23578</h2>
                     <p class="card-title  text-light-gray ">Email Send</p>
                 </div>
+            </div>
+        </section>
+        <!-- sponsor section -->
+        <section class="sponsor">
+            <h3 class="section-title">
+                Our Sponspors
+            </h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsor-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
 
