--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
 
     </main>
     <footer>
+        <div class="footer-contain">
+            
+        <p>All rights reserved copyright &#64 2024 startup landing page design by Parvez</p>
+        </div>
+
 
     </footer>
     
